w2 HW/myclass.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
           <li>
               <a href="w1/intro.html">w1:Intro</a>
           </li>
-          <li><a href="w2/table.html">w2:Pokemon</a></li>
+          <li>
+              <a href="w2/table.html">w2:Pokemon</a></li>
+          <lI>
+              <a href="w2 HW/myclass.html">w2:myclass</a>
+          </lI>
       </ul>
     </body>
 </html>
