--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! doctype html>
 <html>
     <head>
-        <title>Class</title>
+        <title>Weekly Assignment</title>
         <meta charset="utf-8">
     </head>
     <style>
@@ -10,7 +10,7 @@
         }
     </style>        
     <body>
-     <h1>Class</h1>
+     <h1>Weekly Assignment</h1>
       <ul>
           <li>
               <a href="w1/intro.html">w1:Intro</a>
