--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
           </li>
           <li>
               <a href="w2/table.html">w2:Pokemon</a></li>
-          <lI>
+          <li>
               <a href="w2 HW/myclass.html">w2:myclass</a>
-          </lI>
+          </li>
+          <li>
+              <a href="w3/tku60.html">w3:tku60</a>
+          </li>
       </ul>
     </body>
 </html>
