--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <li>
               <a href="w3/tku60.html">w3:tku60</a>
           </li>
+          <li>
+              <a href="w3 HW/div.html">w3:Div</a>
+          </li>
       </ul>
     </body>
 </html>
