--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
           <li>
               <a href="w3 HW/div.html">w3:Div</a>
           </li>
+          <li>
+              <a href="w4/ttt.html">w4:ttt</a><a href="w4/blog.html">blog</a>
+          </li>
       </ul>
     </body>
 </html>
