--- a/w4/ttt.html
+++ b/w4/ttt.html
@@ -1,7 +1,8 @@
 <html>
     <head>
        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-       <link rel="stylesheet" href="ttt.css"> 
+       <link rel="stylesheet" href="ttt.css">
+       <title>TTT Board</title>
     </head>
     <body>
        <h1>Tic Tac Toe</h1>
