--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="w3 HW/div.html">w3:Div</a>
           </li>
           <li>
-              <a href="w4/ttt.html">w4:ttt</a><a href="w4/blog.html">blog</a>
+              <a href="w4/ttt.html">w4:ttt</a><a href="w4/blog.html">,blog</a>
           </li>
       </ul>
     </body>
