--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <li>
               <a href="w4/ttt.html">w4:ttt</a><a href="w4/blog.html">,blog</a>
           </li>
+          <li>
+              <a href="w4 HW/profile.html">w4:profile</a>
+          </li>
       </ul>
     </body>
 </html>
