--- a/w4 HW/profile.html
+++ b/w4 HW/profile.html
@@ -18,10 +18,10 @@
                 最高學歷:
                 <select size="4">
                     <option value="高中以下">高中以下</option>
-                    <option value="高中">高中</option>
                     <option value="大專院校">大專院校</option>
                     <option value="碩士">碩士</option>
                     <option value="博士">博士</option>
+                    <option value="其他">其他</option>
                 </select>
             </fieldset>
             <fieldset>
