--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <li>
               <a href="w4 HW/profile.html">w4:profile</a>
           </li>
+          <li>
+              <a href="w5-imagegallery/imagegallery.html">w5:imagegallery</a>
+          </li>
       </ul>
     </body>
 </html>
