--- a/w5-pet/index.html
+++ b/w5-pet/index.html
@@ -23,7 +23,17 @@
         </nav>
     </aside>
     <article>
-
+        <fieldset>
+            <legend>最新消息</legend>
+            「寵物認養活動」開始囉!<p></p>
+             即日到10月30日止~<p></p>
+             領養條件：<p></p>
+             <ul>
+                 <li>有愛心、有耐心。</li>
+                 <li>認養人未滿18歲，需取得家長同意。</li>
+                 <li>有適合的飼養環境。<p></p>領養寵物專線：(07)711****</li>
+             </ul>
+        </fieldset>
     </article>
     <footer>
 
