--- a/w2/table.html
+++ b/w2/table.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>神奇寶笨表格</title>
+        <title>神奇寶貝表格</title>
         <meta charset="utf-8">
     </head>
     <style>
