--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
           <li>
               <a href="w5-imagegallery/imagegallery.html">w5:imagegallery</a>
           </li>
+          <li>
+              <a href="w5-pet/index.html">w5:pet</a>
+          </li>
       </ul>
     </body>
 </html>
